[package]
name = "pix-image-viewer"
version = "0.2.6"
authors = ["Mason Larobina <masonl@google.com>"]
edition = "2018"
homepage = "https://github.com/google/pix-image-viewer"
repository = "https://github.com/google/pix-image-viewer"
license = "Apache-2.0"
readme = "README.md"
description = "Desktop image viewer. Arranges images in a zoomable, pannable grid."

[[bin]]
name = "pix"
path = "src/main.rs"

[dependencies]
piston = "0.49.0"
piston_window = "0.105.0"
image = "0.22.3"
resize = "0.3.0"
walkdir = "2.2.9"
log = "0.4.8"
env_logger = "0.7.1"
crossbeam-channel = "0.4.0"
num_cpus = "1.11.1"
boolinator = "2.4.0"
clap = "2.33.0"
bincode = "1.2.0"
serde = "1.0.102"
serde_derive = "1.0.102"
histogram = "0.6.9"
lazy_static = "1.4.0"
dirs = "2.0.2"
failure = "0.1.6"
futures = { version = "0.3.1", features = ["thread-pool"] }
vecmath = "1.0.0"
sled = "0.29.2"
rayon = "1.1"
