[package]
name = "pix-image-viewer"
version = "0.2.7"
authors = ["Mason Larobina <masonl@google.com>"]
edition = "2018"
homepage = "https://github.com/google/pix-image-viewer"
repository = "https://github.com/google/pix-image-viewer"
license = "Apache-2.0"
readme = "README.md"
description = "Desktop image viewer. Arranges images in a zoomable, pannable grid."

[[bin]]
name = "pix"
path = "src/main.rs"

[dependencies]
piston = "0.52.1"
piston_window = "0.116.0"
image = "0.23.12"
resize = "0.5.5"
walkdir = "2.3.1"
log = "0.4.11"
env_logger = "0.8.1"
crossbeam-channel = "0.5.0"
num_cpus = "1.13.0"
boolinator = "2.4.0"
clap = "2.33.3"
bincode = "1.3.1"
serde = "1.0.117"
serde_derive = "1.0.117"
histogram = "0.6.9"
lazy_static = "1.4.0"
dirs-next = "2.0.0"
thiserror = "1.0.22"
anyhow = "1.0.34"
futures = { version = "0.3.8", features = ["thread-pool"] }
vecmath = "1.0.0"
sled = "0.34.6"
rayon = "1.5.0"
