[package]
name = "pix-image-viewer"
version = "0.2.7"
authors = ["Mason Larobina <masonl@google.com>"]
edition = "2021"
homepage = "https://github.com/google/pix-image-viewer"
repository = "https://github.com/google/pix-image-viewer"
license = "Apache-2.0"
readme = "README.md"
description = "Desktop image viewer. Arranges images in a zoomable, pannable grid."

[[bin]]
name = "pix"
path = "src/main.rs"

[dependencies]
piston = "0.53.2"
piston_window = "0.128.0"
image = "0.24.6"
resize = "0.7.4"
walkdir = "2.3.3"
log = "0.4.17"
env_logger = "0.10.0"
crossbeam-channel = "0.5.8"
num_cpus = "1.15.0"
boolinator = "2.4.0"
clap = { version = "4.2.4", features = ["derive"] }
bincode = "1.3.3"
serde = { version = "1.0.160", features = ["derive"] }
histogram = "0.7.2"
lazy_static = "1.4.0"
dirs-next = "2.0.0"
thiserror = "1.0.40"
anyhow = "1.0.70"
futures = { version = "0.3.28", features = ["thread-pool"] }
vecmath = "1.0.0"
sled = "0.34.7"
rayon = "1.7.0"
